BUGFIX: Email Attachments
- Previously wasn't fetching the entire email, only header
- Refactored search to return entire email message

NOTE: Future Improvements
- This is a more heavy weight operation
- Should create another search methods which looks at only the email
  header
