# Sources/Email/Server/EmailServerV1.swift
@@ -47,6 +47,12 @@ public actor EmailServerV1: APIProtocol {
         )
     }
     
+    // Searches just the message header, without loading all parts of the message
+    public func getSearchMessageHeaders() async throws {
+        // TODO: just like get search, but with the method below
+        //let headers = try await imapServer.fetchMessageInfo(using: messagesSet)
+    }
+    
     public func getSearch(_ input: Operations.GetSearch.Input) async throws -> Operations.GetSearch.Output {
         let mailboxName = input.query.mailbox
         let _ = try await imapServer.selectMailbox(mailboxName)
@@ -70,14 +76,14 @@ public actor EmailServerV1: APIProtocol {
             )
         }
         
-        let payload = try await imapServer
-            .fetchMessageInfo(using: messagesSet)
-            .map { Components.Schemas.MessageInfo(info: $0) }
-    
+        let messages = try await imapServer
+            .fetchMessages(using: messagesSet, limit: 5) // TODO: Figure out if we want this
+            .map { Components.Schemas.EmailMessage(message: $0) }
+            
         return .ok(
             .init(
                 body: .json(
-                    .init(payload)
+                    .init(messages)
                 )
             )
         )
@@ -95,91 +101,3 @@ public actor EmailServerV1: APIProtocol {
             }
     }
 }
-
-extension Components.Schemas.SearchCriteriaQuery {
-    func toSearchCriteria() throws -> [SearchCriteria] {
-        var criteria: [SearchCriteria] = []
-        
-        if !self.simple.isEmpty {
-            criteria.append(contentsOf: try self.simple.map { try $0.searchCriteria() })
-        }
-        
-        if !self.singleValue.isEmpty {
-            criteria.append(contentsOf: try singleValue.map { try $0.searchCriteria() })
-        }
-
-        return criteria
-    }
-}
-
-extension String {
-    func searchCriteria() throws -> SearchCriteria {
-        switch self {
-        case "all":
-            return .all
-        case "answered":
-            return .answered
-        case "flagged":
-            return .flagged
-        case "deleted":
-            return .deleted
-        case "draft":
-            return .draft
-        case "new":
-            return .new
-        case "old":
-            return .old
-        case "recent":
-            return .recent
-        case "seen":
-            return .seen
-        case "unseen":
-            return .unseen
-        default:
-            throw SearchCriteriaErrors.unsupportedSearchCriteria
-        }
-    }
-}
-
-extension Components.Schemas.SingleValueSearch {
-    func searchCriteria() throws -> SearchCriteria {
-        switch self.criteriaType {
-        case .case1(let payload):
-            switch payload._type {
-            case .dateBefore:
-                guard let date = EmailServerV1.dateFormatter.date(from: value) else {
-                    throw SearchCriteriaErrors.dateDecodingFailed
-                }
-                return .before(date)
-            case .dateOn:
-                guard let date = EmailServerV1.dateFormatter.date(from: value) else {
-                    throw SearchCriteriaErrors.dateDecodingFailed
-                }
-                return .on(date)
-            case .since:
-                guard let date = EmailServerV1.dateFormatter.date(from: value) else {
-                    throw SearchCriteriaErrors.dateDecodingFailed
-                }
-                return .since(date)
-            case .sentOn:
-                guard let date = EmailServerV1.dateFormatter.date(from: value) else {
-                    throw SearchCriteriaErrors.dateDecodingFailed
-                }
-                return .sentOn(date)
-            case .text:
-                return .text(self.value)
-            case .bodyContaining:
-                return .body(value)
-            case .from:
-                return .from(value)
-            case .keyword:
-                return .keyword(value)
-            case .subject:
-                return .subject(value)
-            }
-        }
-    }
-}
-
-
-
